# biotransport

./: .clang-format  .coverage  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  dev.sh  docker-compose.yml  environment.yml  pyproject.toml  pytest.ini  readme.md  run_examples.py  setup.py
cpp/: CMakeLists.txt
cpp/benchmarks/: CMakeLists.txt  bench_diffusion_2d.cpp  bench_linear_reaction_diffusion.cpp  bench_utils.hpp  bench_variable_diffusion.cpp
cpp/include/biotransport/: biotransport.hpp
cpp/include/biotransport/core/: analytical.hpp  boundary.hpp  dimensionless.hpp  mesh.hpp  utils.hpp
cpp/include/biotransport/core/mesh/: cylindrical_mesh.hpp  indexing.hpp  mesh.hpp  mesh_iterators.hpp  mesh_iterators_3d.hpp  structured_mesh.hpp  structured_mesh_3d.hpp
cpp/include/biotransport/core/numerics/: stability.hpp
cpp/include/biotransport/core/numerics/linear_algebra/: sparse_matrix.hpp  tridiagonal.hpp
cpp/include/biotransport/core/numerics/solvers/: iterative.hpp
cpp/include/biotransport/core/numerics/time_integration/: explicit_euler.hpp
cpp/include/biotransport/core/problems/: transport_problem.hpp
cpp/include/biotransport/io/: vtk_export.hpp
cpp/include/biotransport/physics/: reactions.hpp
cpp/include/biotransport/physics/fluid_dynamics/: darcy_flow.hpp  navier_stokes.hpp  non_newtonian.hpp  stokes.hpp  velocity_bc_applicator.hpp
cpp/include/biotransport/physics/heat_transfer/: bioheat_cryotherapy.hpp
cpp/include/biotransport/physics/mass_transport/: diffusion.hpp  gray_scott.hpp  membrane_diffusion.hpp  reaction_diffusion.hpp  tumor_drug_delivery.hpp
cpp/include/biotransport/solvers/: adi_solver.hpp  advection_diffusion_solver.hpp  crank_nicolson.hpp  diffusion.hpp  diffusion_solver_3d.hpp  diffusion_solvers.hpp  explicit_fd.hpp  implicit_diffusion.hpp  multi_species_solver.hpp  nernst_planck_solver.hpp  reaction_diffusion.hpp  solver_base.hpp
cpp/src/core/: mesh.cpp  utils.cpp
cpp/src/core/mesh/: cylindrical_mesh.cpp  structured_mesh.cpp  structured_mesh_3d.cpp
cpp/src/physics/fluid_dynamics/: darcy_flow.cpp  navier_stokes.cpp  stokes.cpp
cpp/src/physics/heat_transfer/: bioheat_cryotherapy.cpp
cpp/src/physics/mass_transport/: diffusion.cpp  gray_scott.cpp  reaction_diffusion.cpp  tumor_drug_delivery.cpp
cpp/src/solvers/: diffusion.cpp  reaction_diffusion.cpp
cpp/tests/: CMakeLists.txt  test_diffusion.cpp
cpp/tests/core/: test_analytical.cpp  test_dimensionless.cpp  test_mesh.cpp
cpp/tests/physics/: test_advection_diffusion.cpp  test_boundary_corners.cpp  test_constant_source_reaction_diffusion.cpp  test_diffusion.cpp  test_diffusion_1d_neumann.cpp  test_diffusion_2d.cpp  test_explicit_fd_run.cpp  test_explicit_fd_run_constant_source.cpp  test_explicit_fd_run_logistic.cpp  test_explicit_fd_run_michaelis_menten.cpp  test_linear_reaction_diffusion.cpp  test_logistic_reaction_diffusion.cpp  test_michaelis_menten_reaction_diffusion.cpp  test_navier_stokes.cpp  test_stokes.cpp
docs/: Doxyfile
docs/notes/: ARCHITECTURE.md  BMEN341_BioTransport_Analysis.md  FOOTPRINT.md  GAP_ANALYSIS.md  PARAMETERS.md
docs/sphinx/: conf.py  examples.rst  getting_started.rst  index.rst
docs/sphinx/api/: config.rst  index.rst  solvers.rst  utilities.rst
examples/: 1d_diffusion.py  drug_diffusion_2d.py
examples/advanced/: bioheat_cryotherapy.py  higher_order_schemes.py  nernst_planck_ion_transport.py  newton_raphson.py  tumor_drug_delivery.py  turing_patterns.py
examples/basic/: 1d_diffusion.py  3d_diffusion.py  heat_conduction.py
examples/verification/: grid_convergence.py  verify_crank_nicolson.py  verify_diffusion.py  verify_poiseuille.py  verify_taylor_couette.py  verify_viscoelastic.py
python/bindings/: CMakeLists.txt  binding_helpers.hpp  biotransport_bindings.cpp  biotransport_bindings_new.cpp  diffusion_bindings.cpp  diffusion_bindings.hpp  fluid_bindings.cpp  fluid_bindings.hpp  io_bindings.cpp  io_bindings.hpp  mesh_bindings.cpp  mesh_bindings.hpp  sparse_bindings.cpp  sparse_bindings.hpp  utilities_bindings.cpp  utilities_bindings.hpp
python/biotransport/: __init__.py  adaptive.py  convergence.py  fields.py  high_order.py  initial_conditions.py  mesh_utils.py  newton_raphson.py  pulsatile.py  run.py  time_integrators.py  utils.py  visualization.py  vtk_export.py
python/biotransport/_core/: __init__.py  _core.pyi
python/biotransport/config/: __init__.py  bioheat_cryotherapy.py  parameter_ranges.py  tumor_drug_delivery.py
python/tests/: conftest.py  test_3d.py  test_adaptive.py  test_adi.py  test_advection_diffusion.py  test_convergence.py  test_crank_nicolson.py  test_diffusion.py  test_explicit_fd_facade.py  test_fields.py  test_high_order.py  test_initial_conditions.py  test_membrane_diffusion.py  test_mesh_utils.py  test_multi_species.py  test_navier_stokes.py  test_nernst_planck.py  test_newton_raphson.py  test_pulsatile.py  test_stokes.py  test_time_integrators.py  test_utils.py  test_vtk_export.py
