[build-system]
requires = ["setuptools>=42", "wheel", "cmake>=3.13", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "biotransport"
version = "0.1.0"
description = "A high-performance library for biotransport phenomena modeling"
readme = "readme.md"
license = {text = "MIT"}
authors = [{name = "Grant McNatt", email = "gmcnatt1@tamu.edu"}]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.20",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "furo",
    "myst-parser",
    "sphinx-autodoc-typehints",
]
dev = [
    "pre-commit>=3.0",
    "ruff>=0.8",
]
test = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/ZoOtMcNoOt/biotransport"
Repository = "https://github.com/ZoOtMcNoOt/biotransport"
